--- a/header.css
+++ b/header.css
@@ -1,4 +1,10 @@
 h1 {
-    background-color: #333;
-    color: #fff;
+  background-color: #333;
+  color: #fff;
+}
+
+footer {
+  background-color: #333;
+  color: #fff;
+  text-align: center;
 }
